<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Q3 Sensor Reader</string>
    <string name="title_sensors">Sensor data</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="light">Light</string>
    <string name="proximity">Proximity</string>
    <string name="waiting_data">Waiting for data…</string>
    <string name="sensor_ok">%1$s: available</string>
    <string name="sensor_missing">%1$s: not available on this device</string>
    <string name="accel_format">x: %1$.3f  y: %2$.3f  z: %3$.3f m/s²</string>
    <string name="light_format">%1$.2f lux</string>
    <string name="proximity_format">distance: %1$.3f cm (max range %2$.4f)</string>
</resources>
